@@ -13,6 +13,8 @@ public final class HmsProxyApplication {
   }
 
   public static void main(String[] args) throws Exception {
+    LoggingBootstrap.initialize();
+
     if (args.length != 1) {
       System.err.println("Usage: java -jar hms-proxy.jar <config.properties>");
       System.exit(64);
@@ -21,16 +23,21 @@ public final class HmsProxyApplication {
     HiveConf.setLoadMetastoreConfig(false);
     HiveConf.setLoadHiveServer2Config(false);
 
-    ProxyConfig config = ProxyConfigLoader.load(Path.of(args[0]));
-    try (CatalogRouter router = CatalogRouter.open(config)) {
-      RoutingMetaStoreHandler handler = new RoutingMetaStoreHandler(config, router);
-      ThriftHiveMetastore.Iface proxy =
-          RoutingMetaStoreHandler.newProxy(ThriftHiveMetastore.Iface.class, handler);
-      MetastoreThriftServer server = new MetastoreThriftServer(config, proxy);
-      installShutdownHook(server);
-      LOG.info("Starting HMS proxy '{}' on {}:{}", config.server().name(),
-          config.server().bindHost(), config.server().port());
-      server.serve();
+    try {
+      ProxyConfig config = ProxyConfigLoader.load(Path.of(args[0]));
+      try (CatalogRouter router = CatalogRouter.open(config)) {
+        RoutingMetaStoreHandler handler = new RoutingMetaStoreHandler(config, router);
+        ThriftHiveMetastore.Iface proxy =
+            RoutingMetaStoreHandler.newProxy(ThriftHiveMetastore.Iface.class, handler);
+        MetastoreThriftServer server = new MetastoreThriftServer(config, proxy);
+        installShutdownHook(server);
+        LOG.info("Starting HMS proxy '{}' on {}:{}", config.server().name(),
+            config.server().bindHost(), config.server().port());
+        server.serve();
+      }
+    } catch (Exception e) {
+      emitKerberosJvmHint(e);
+      throw e;
     }
   }
 
@@ -39,5 +46,33 @@ public final class HmsProxyApplication {
       LOG.info("Shutdown requested, stopping HMS proxy");
       server.stop();
     }, "hms-proxy-shutdown"));
+  }
+
+  private static void emitKerberosJvmHint(Throwable error) {
+    if (!containsKerberosModuleAccessFailure(error)) {
+      return;
+    }
+
+    System.err.println("Kerberos startup failed because Hadoop 2.x is running on a modular JDK.");
+    System.err.println(
+        "Start the proxy with JVM flags "
+            + "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED "
+            + "and --add-exports=java.security.jgss/sun.security.krb5=ALL-UNNAMED.");
+    System.err.println(
+        "Also make sure a readable krb5.conf is available, for example via "
+            + "-Djava.security.krb5.conf=/etc/krb5.conf.");
+  }
+
+  private static boolean containsKerberosModuleAccessFailure(Throwable error) {
+    Throwable current = error;
+    while (current != null) {
+      if (current instanceof IllegalAccessException
+          && current.getMessage() != null
+          && current.getMessage().contains("sun.security.krb5")) {
+        return true;
+      }
+      current = current.getCause();
+    }
+    return false;
   }
 }
